--- a/wp-rest-api-react/public/index.html
+++ b/wp-rest-api-react/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NLNTR9XR6Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NLNTR9XR6Y');
+</script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,23 +18,26 @@
     <meta property="title" content="Rishabh Passi | Portfolio">
     <meta property="description" content="This is a portfolio site created by Rishabh Passi.">
     <meta property="url" content="https://rishabhp.in/portfolio">
+    <!-- Primary Meta Tags -->
+<title>Rishabh Passi | Front-end Developer</title>
+<meta name="title" content="Rishabh Passi | Front-end Developer">
+<meta name="description" content="This is a portfolio site created by Rishabh Passi.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://rishabhp.in/portfolio/">
+<meta property="og:title" content="Rishabh Passi | Front-end Developer">
+<meta property="og:description" content="This is a portfolio site created by Rishabh Passi.">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://rishabhp.in/portfolio/">
+<meta property="twitter:title" content="Rishabh Passi | Front-end Developer">
+<meta property="twitter:description" content="This is a portfolio site created by Rishabh Passi.">
 
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto|Maitree:400,700&display=swap" rel="stylesheet">
     <title>Rishabh Passi | Front-end Developer</title>
   </head>
